completely merged, still needs toolbar and some database stuff

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_vocab">Vocab</string>
     <string name="title_activity_mock_exam">MockExam</string>
     <string name="title_activity_login_sign_up">LoginSignUp</string>
+    <string name="settings_name">Settings</string>
 </resources>
